--- a/my-app/package.json
+++ b/my-app/package.json
@@ -73,6 +73,7 @@
     "katex": "^0.16.15",
     "lucide-react": "^0.341.0",
     "mammoth": "^1.8.0",
+    "marked": "^15.0.4",
     "mdx-bundler": "^10.0.3",
     "mixpanel-browser": "^2.49.0",
     "mongodb": "^6.5.0",
