--- a/my-app/package.json
+++ b/my-app/package.json
@@ -68,6 +68,7 @@
     "framer-motion": "^11.11.9",
     "gray-matter": "^4.0.3",
     "highlight.js": "^11.10.0",
+    "html-react-parser": "^5.2.2",
     "input-otp": "^1.2.4",
     "jotai": "^2.7.1",
     "jspdf": "^2.5.2",
@@ -108,7 +109,9 @@
     "react-toastify": "^10.0.5",
     "recharts": "^2.12.7",
     "rehype-autolink-headings": "^7.1.0",
+    "rehype-react": "^8.0.0",
     "rehype-slug": "^6.0.0",
+    "rehype-stringify": "^10.0.1",
     "remark": "^15.0.1",
     "remark-gfm": "^4.0.0",
     "remark-html": "^16.0.1",
