--- a/my-app/package.json
+++ b/my-app/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ai-sdk/azure": "^0.0.48",
     "@ai-sdk/openai": "^0.0.66",
+    "@aptabase/react": "^0.3.5",
     "@azure/openai": "^1.0.0-beta.11",
     "@clerk/nextjs": "^5.1.5",
     "@hookform/resolvers": "^3.3.4",
