--- a/my-app/package.json
+++ b/my-app/package.json
@@ -93,6 +93,7 @@
     "nextstepjs": "^1.1.0",
     "onborda": "^1.2.4",
     "openai": "^4.29.2",
+    "papaparse": "^5.5.1",
     "posthog-js": "^1.160.1",
     "react": "^18",
     "react-day-picker": "^8.10.0",
@@ -136,6 +137,7 @@
     "@tailwindcss/typography": "^0.5.16",
     "@types/canvas-confetti": "^1.6.4",
     "@types/node": "^20",
+    "@types/papaparse": "^5.3.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-katex": "^3.0.4",
