--- a/my-app/package.json
+++ b/my-app/package.json
@@ -15,6 +15,7 @@
     "@azure/openai": "^1.0.0-beta.11",
     "@calcom/embed-react": "^1.5.2",
     "@clerk/nextjs": "^5.1.5",
+    "@clerk/types": "^4.44.2",
     "@hookform/resolvers": "^3.3.4",
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
