--- a/my-app/package.json
+++ b/my-app/package.json
@@ -106,6 +106,7 @@
     "react-icons": "^5.3.0",
     "react-katex": "^3.0.1",
     "react-paystack": "^5.0.0",
+    "react-phone-number-input": "^3.4.11",
     "react-query": "^3.39.3",
     "react-redux": "^9.1.0",
     "react-resizable-panels": "^2.0.13",
