feat: add @vercel/og and @resvg/resvg-wasm dependencies to package.json and package-lock.json

--- a/my-app/package.json
+++ b/my-app/package.json
@@ -55,6 +55,7 @@
     "@tanstack/react-table": "^8.13.2",
     "@uploadthing/react": "^6.4.1",
     "@vercel/analytics": "^1.2.2",
+    "@vercel/og": "^0.6.5",
     "@vercel/speed-insights": "^1.0.12",
     "ai": "^3.0.8",
     "axios": "^1.6.8",
