--- a/my-app/package.json
+++ b/my-app/package.json
@@ -16,7 +16,11 @@
     "@calcom/embed-react": "^1.5.2",
     "@clerk/nextjs": "^5.1.5",
     "@clerk/types": "^4.44.2",
+    "@emoji-mart/data": "^1.2.1",
+    "@emoji-mart/react": "^1.1.1",
     "@hookform/resolvers": "^3.3.4",
+    "@liveblocks/client": "^2.22.0",
+    "@liveblocks/react": "^2.22.0",
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
     "@nextui-org/react": "^2.3.6",
@@ -33,7 +37,7 @@
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-hover-card": "^1.0.7",
     "@radix-ui/react-icons": "^1.3.2",
-    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-menubar": "^1.0.4",
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-popover": "^1.0.7",
@@ -71,6 +75,7 @@
     "dotenv": "^16.4.5",
     "email-validator": "^2.0.4",
     "embla-carousel-react": "^8.0.0",
+    "emoji-picker-react": "^4.12.2",
     "exceljs": "^4.4.0",
     "framer-motion": "^11.11.9",
     "gray-matter": "^4.0.3",
